Issue #16981: Migrate to Java 21