@@ -67,10 +67,10 @@ public class XmlMetaReaderTest extends AbstractPathTestSupport {
             assertThat(result.getName()).isEqualTo("InputCheck");
             final List<String> violationMessageKeys = result.getViolationMessageKeys();
             assertThat(violationMessageKeys).hasSize(1);
-            assertThat(violationMessageKeys.get(0)).isEqualTo("test.key");
+            assertThat(violationMessageKeys.getFirst()).isEqualTo("test.key");
             final List<ModulePropertyDetails> props = result.getProperties();
             assertThat(props).hasSize(2);
-            final ModulePropertyDetails prop1 = props.get(0);
+            final ModulePropertyDetails prop1 = props.getFirst();
             checkProperty(prop1, "propertyOne", "java.lang.String",
                 "propertyOneDefaultValue",
                 "Property wrapped\n            description.");
@@ -95,7 +95,7 @@ public class XmlMetaReaderTest extends AbstractPathTestSupport {
             assertThat(result.getName()).isEqualTo("InputCheckNoProps");
             final List<String> violationMessageKeys = result.getViolationMessageKeys();
             assertThat(violationMessageKeys).hasSize(2);
-            assertThat(violationMessageKeys.get(0)).isEqualTo("test.key1");
+            assertThat(violationMessageKeys.getFirst()).isEqualTo("test.key1");
             assertThat(violationMessageKeys.get(1)).isEqualTo("test.key2");
             assertThat(result.getProperties()).isEmpty();
         }
@@ -113,7 +113,7 @@ public class XmlMetaReaderTest extends AbstractPathTestSupport {
             assertThat(result.getViolationMessageKeys()).isEmpty();
             final List<ModulePropertyDetails> props = result.getProperties();
             assertThat(props).hasSize(1);
-            final ModulePropertyDetails prop1 = props.get(0);
+            final ModulePropertyDetails prop1 = props.getFirst();
             checkProperty(prop1, "propertyOne", "java.util.regex.Pattern",
                 "propertyDefaultValue", "Property description.");
             assertThat(prop1.getValidationType()).isNull();
@@ -133,7 +133,7 @@ public class XmlMetaReaderTest extends AbstractPathTestSupport {
             assertThat(result.getViolationMessageKeys()).isEmpty();
             final List<ModulePropertyDetails> props = result.getProperties();
             assertThat(props).hasSize(1);
-            final ModulePropertyDetails prop1 = props.get(0);
+            final ModulePropertyDetails prop1 = props.getFirst();
             assertThat(prop1.getName()).isEqualTo("fileNamePattern");
             assertThat(prop1.getType()).isEqualTo("java.util.regex.Pattern");
             assertThat(prop1.getDefaultValue()).isNull();
